fixed modal positioning on mobile and overflow on tablet screens

--- a/components/home/centerPiece/CenterPiece.module.scss
+++ b/components/home/centerPiece/CenterPiece.module.scss
@@ -8,7 +8,7 @@
 		max-width: $max-width;
 		margin-inline: auto;
 		transition: all 400ms ease-in-out;
-		overflow-x: hidden;
+		overflow: hidden;
 		.image_and_text {
 			display: flex;
 			align-items: flex-start;
@@ -65,10 +65,12 @@
 		background-color: rgba(255, 255, 255, 0.1);
 		margin-top: 8rem;
 	}
+
 	@include screenMax("tablet") {
 		margin-bottom: 6rem;
 		.section_container {
-			padding: 2rem;
+			padding: 2.4rem;
+			overflow: hidden;
 			.grid {
 				overflow-x: scroll;
 			}
@@ -103,6 +105,8 @@
 	@include screenMax('mobile') {
 		margin-bottom: 4rem;
 		.section_container {
+			overflow: hidden;
+			padding: 1.6rem;
 			.image_and_text {
 				gap: 1.6rem;
 				flex-direction: column;
