--- a/components/home/drivers/Drivers.module.scss
+++ b/components/home/drivers/Drivers.module.scss
@@ -7,6 +7,7 @@
 		padding: 3.6rem;
 		max-width: $max-width;
 		margin-inline: auto;
+		overflow: hidden;
 		position: relative;
 		.text {
 			h2 {
@@ -224,6 +225,7 @@
 		margin-bottom: 4rem;
 		.section_container {
 			padding: 2.4rem 1.6rem;
+			overflow: hidden;
 			.text {
 				h2 {
 					font-size: 2.4rem;
