--- a/components/home/growth/Growth.module.scss
+++ b/components/home/growth/Growth.module.scss
@@ -7,6 +7,7 @@
 		padding: 3.6rem;
 		max-width: $max-width;
 		margin-inline: auto;
+		overflow: hidden;
 		.text {
 			h3,
 			span {
